feat: add service worker configuration and scroll navbar animation

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="All food for you, Only on Bites" />
+  <meta name="theme-color" content="#ff8303" />
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
   <link rel="icon" href="logo.svg" />
+  <link rel="manifest" href="manifest.json" />
   <title>Bites</title>
 </head>
 
