--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -6,7 +6,7 @@
   --gold-color: #ffcc47;
 }
 
-@media (max-width: 560px) {
+@media (max-width: 35rem) {
   .list-items {
     font-size: 14px;
   }
@@ -18,7 +18,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 50rem) {
   .navbar {
     position: fixed;
     top: 0;
@@ -90,23 +90,21 @@
   }
 }
 
-@media (max-width: 840px) {
+@media (max-width: 52.5rem) {
   .badge {
     font-size: 0.875rem;
     padding: 0.5rem 0.75rem;
   }
 }
 
-@media (max-width: 930px) {
+@media (max-width: 58.125rem) {
   .container {
     margin: 0;
     max-width: 100%;
   }
   .social-items {
     padding: 0.375rem;
-    /* 6px */
     font-size: 0.875rem;
-    /* 14px */
   }
   .choose-container {
     flex-direction: column;
@@ -118,9 +116,7 @@
   }
   .choose-title {
     margin-top: 1.875rem;
-    /* 30px */
     font-size: 1.3em;
-    /* 20p.8x */
   }
   .list-choose-item {
     font-size: 1.188rem;
@@ -130,13 +126,14 @@
   }
   .bites-description {
     font-size: 1.3em;
-    /* 20.8px */
     margin-bottom: 1.25rem;
-    /* 20px */
+  }
+  .footer-content {
+    margin-bottom: 1.875rem;
   }
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 74.938rem) {
   .container {
     max-width: 100%;
     margin: 0;
@@ -146,6 +143,9 @@
   }
   .nav-list {
     padding-right: 1.2rem;
+  }
+  .hero {
+    margin-top: 0;
   }
   .hero-image {
     max-width: 100%;
