--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
   --white-color: #ffffff;
   --badge-color: #ff3d68;
   --gold-color: #ffcc47;
+  --border-accent: #ececec;
 }
 
 * {
@@ -53,13 +54,18 @@ body {
 
 /* Navigation Drawer */
 
+.navbar-wrapper {
+  border-bottom: 1px solid var(--border-accent);
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.625rem 0;
   min-height: 4.375rem;
-  max-width: 100%;
+  max-width: 62.5rem;
+  margin: 0 auto;
 }
 
 .hamburger-menu {
@@ -167,13 +173,13 @@ body {
 /* Hero */
 
 .hero {
+  margin-top: 30px;
   position: relative;
 }
 
 .hero-image {
   position: relative;
   max-width: 62.5rem;
-  height: 50%;
   border-radius: 0.5rem;
 }
 
@@ -329,6 +335,11 @@ body {
   margin-bottom: 0.188rem;
 }
 
+.outlet-name a {
+  padding: 0.625rem 0;
+  text-decoration: none;
+}
+
 .outlet-location {
   display: flex;
   align-items: center;
@@ -355,7 +366,7 @@ body {
 .star {
   margin-right: 0.313rem;
   align-self: flex-start;
-  margin-top: 1px;
+  margin-top: 0.063rem;
 }
 
 
@@ -400,12 +411,17 @@ body {
 
 /* Footer Section */
 
+.footer-container {
+  border-top: 1px solid var(--border-accent);
+}
+
 .footer-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 2rem;
   padding: 3.125rem 0;
+  max-width: 62.5rem;
+  margin: 0 auto;
 }
 
 .bites-description {
