--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -95,7 +95,7 @@ body {
   min-width: 1.75rem;
   min-height: 0.375rem;
   background-color: var(--primary-color);
-  border-radius: 0.125rem;
+  border-radius: 3.125rem;
   transition: all 0.3s;
 }
 
@@ -120,7 +120,7 @@ body {
 
 .hamburger-menu input:checked~span:nth-child(3) {
   opacity: 0;
-  transform: translateX(-50);
+  transform: translateX(-3.125rem);
 }
 
 
@@ -226,6 +226,20 @@ body {
 
 .most-favorite {
   margin-top: 6.25rem;
+  text-align: right;
+}
+
+.link-container {
+  display: inline-block;
+}
+
+.link-container .food-link {
+  margin-top: 1rem;
+  padding: 1rem 0;
+  text-decoration: none;
+  text-align: right;
+  font-size: 1.125em;
+  font-weight: 500;
 }
 
 .food {
@@ -233,7 +247,8 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
   grid-template-rows: auto;
   gap: 1.25rem;
-  margin-top: 3.125rem;
+  margin-top: 2rem;
+  text-align: left;
 }
 
 .card {
@@ -304,27 +319,36 @@ body {
 
 .outlet {
   margin-top: 6.25rem;
+  text-align: right;
+}
+
+.link-container .outlet-link {
+  display: none;
+  padding: 1rem 0;
+  text-decoration: none;
+  text-align: right;
+  font-size: 1.125em;
+  font-weight: 500;
 }
 
 .outlet-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(14.375rem, 1fr));
   grid-template-rows: auto;
-  row-gap: 2rem;
-  column-gap: 1.25rem;
   place-items: center;
-  column-gap: 0.625rem;
-  margin-top: 3.125rem;
+  gap: 1.25rem;
+  margin-top: 1rem;
+  text-align: left;
 }
 
 .outlet-card {
   position: relative;
   border-radius: 0.75rem;
-  max-width: max-content;
+  width: 100%;
 }
 
 .outlet-image {
-  max-width: 100%;
+  width: 100%;
   height: 11.25rem;
   border-radius: 0.75rem;
 }
