--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -1,9 +1,9 @@
 :root {
   --primary-color: #ff8303;
   --gold-color: #ffcc47;
-  --dark-black: #1b1a17;
+  --dark-black: #112031;
   --white-color: #ffffff;
-  --gray-color: #a8a8a8;
+  --blue-gray: #87a7b3;
   --warning-color: #ff0000;
 }
 
@@ -12,7 +12,7 @@ li {
 }
 
 .wrapper {
-  margin: 2.25rem 0 0 0;
+  margin-top: 2.25rem;
 }
 
 .notfound-container {
@@ -33,7 +33,7 @@ li {
 
 .notfound-container .notfound-description {
   font-size: 1.25em;
-  color: var(--gray-color);
+  color: var(--blue-gray);
 }
 
 
@@ -55,7 +55,7 @@ li {
 
 .detail-outlet-section .detail-outlet-location {
   margin-bottom: 5rem;
-  color: var(--gray-color);
+  color: var(--blue-gray);
   font-size: 1em;
   font-weight: 300;
   text-align: center;
@@ -101,7 +101,7 @@ li {
   font-weight: 500;
   color: var(--white-color);
   border-radius: 3.125rem;
-  background-color: var(--primary-color);
+  background-color: var(--dark-black);
 }
 
 .detail-outlet-rating {
@@ -118,7 +118,7 @@ li {
   position: fixed;
   bottom: 3rem;
   right: 3rem;
-  background-color: var(--primary-color);
+  background-color: var(--dark-black);
   color: var(--white-color);
   border: 0;
   border-radius: 50%;
@@ -138,45 +138,49 @@ li {
 /* Food Section */
 
 .menu-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
   margin-top: 1rem;
-}
-
-.menu-wrapper {
-  display: flex;
-  align-items: center;
-  background-color: #eaeaea;
-  max-width: 100%;
-  padding: 0.5rem;
-  border-radius: 4px;
-}
-
-.menu-card {
-  padding: 3px;
-}
-
-.menu-icon {
-  display: inline-block;
-  max-width: 1.7rem;
-  margin-bottom: 0.5rem;
 }
 
 .menu-title {
   margin: 6.25rem 0 1rem 0;
   font-size: 2em;
-  font-weight: 700;
-  color: var(--primary-color);
+  font-weight: 600;
+  color: var(--dark-black);
+}
+
+.menu-wrapper {
+  max-width: 30%;
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+
+.menu-card {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  padding: 3px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.menu-icon {
+  display: inline-block;
+  width: 3.3rem;
+  border-radius: 50%;
+  margin-bottom: 0.5rem;
 }
 
 .menu-list {
-  color: var(--dark-black);
-  font-size: 1em;
   font-weight: 400;
+}
+
+.menu-name {
+  font-size: 1em;
+}
+
+.menu-price {
+  font-size: 14px;
+  font-weight: 300;
+  color: var(--blue-gray);
 }
 
 
@@ -186,53 +190,82 @@ li {
   margin: 6.25rem 0;
 }
 
-.reviews-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(230px, 1fr));
-  gap: 1.25rem;
-}
-
-.reviews-wrapper {
-  margin-top: 0.75;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  background-color: #eaeaea;
-}
-
-.user-profile {
-  max-width: 1.875rem;
-}
-
-.reviews-title {
-  margin-bottom: 2rem;
-  color: var(--primary-color);
+.review-title {
+  margin-bottom: 1.5rem;
+  color: var(--dark-black);
   font-size: 2em;
-  font-weight: 700;
-}
-
-.reviews-name {
-  margin-bottom: 0.25rem;
   font-weight: 600;
-  font-size: 1;
-  letter-spacing: 0.063em;
-  word-wrap: break-word;
 }
 
-.reviews-description {
-  margin-bottom: 0.5rem;
-  font-size: 1em;
-  word-wrap: break-word;
+.review-container {
+  columns: 4;
+  column-gap: 20px;
+}
+
+.review-card {
+  padding: 0.5rem;
+  width: 100%;
+  margin-bottom: auto;
+  overflow: hidden;
+  break-inside: avoid;
+}
+
+.review-card .desc {
+  position: relative;
+  background: var(--blue-gray);
+  border-radius: 1.5rem;
+}
+
+.desc .review-text {
+  padding: 0.9rem;
+  font-size: 14px;
+  color: var(--white-color);
+  letter-spacing: 0.8px;
   font-weight: 300;
+  line-height: 1.4rem;
 }
 
-.reviews-date {
-  display: inline-block;
-  font-size: 0.9em;
-  border-radius: 3.125rem;
+.review-card .desc::after {
+  content: '';
+  position: absolute;
+  bottom: -1rem;
+  left: 1.2rem;
+  min-height: 2.2rem;
+  min-width: 2rem;
+  z-index: -1;
+  background-color: var(--blue-gray);
+  clip-path: polygon(100% 0, 0 0, 51% 100%);
+}
+
+.review-card .profile {
+  display: flex;
+  align-items: center;
+  column-gap: 0.8rem;
+  margin-top: 1.6rem;
+  margin-left: 7px;
+  padding: 0 0.3rem;
+}
+
+.profile .photo {
+  max-width: 50px;
+  clip-path: circle();
+}
+
+.profile .name {
+  font-size: 1.125em;
   font-weight: 500;
+  letter-spacing: 1px;
   color: var(--dark-black);
 }
+
+.profile .date {
+  font-size: 12px;
+  margin-top: 4px;
+  color: var(--blue-gray);
+}
+
+
+/* Form */
 
 .form-container {
   display: flex;
@@ -246,7 +279,7 @@ li {
 .form-container label {
   font-size: 1em;
   font-weight: 500;
-  color: var(--primary-color);
+  color: var(--dark-black);
 }
 
 .form-container input[type='text'],
@@ -254,42 +287,88 @@ textarea {
   display: block;
   padding: 0.75rem 1.25rem;
   margin: 0.9rem 0;
-  border: 2px solid var(--primary-color);
+  border: 2px solid var(--dark-black);
   border-radius: 0.5rem;
   box-sizing: border-box;
   font-size: 1.125em;
   font-weight: 300;
   width: 100%;
-  color: var(--dark-black);
+  color: var(--white-color);
+}
+
+.form-container input[type='text']:focus {
+  background-color: var(--dark-black);
 }
 
 .form-container textarea {
   resize: vertical;
 }
 
+.form-container textarea:focus {
+  background-color: var(--dark-black);
+}
+
 .form-container button {
   padding: 0.75rem 1.25rem;
   margin: 0.9rem 0;
-  background-color: var(--primary-color);
+  background-color: var(--dark-black);
   border: none;
   border-radius: 0.5rem;
   font-size: 1em;
   color: var(--white-color);
   cursor: pointer;
+  transition: 0.5s all;
 }
 
-@media (max-width: 37rem) {
-  .detail-outlet-section .detail-outlet-name {
-    font-size: 1.7em;
+.form-container button:hover {
+  transform: translateY(-3px);
+  -webkit-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+  -moz-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+  box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+}
+
+@media (max-width: 74.938rem) {
+  .review-container {
+    columns: 3;
+  }
+  .form-container,
+  .menu-title,
+  .wrapper {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+  .menu-wrapper {
+    max-width: 45%;
+  }
+  .detail-outlet-section .description-wrapper {
+    flex-direction: column;
+  }
+  .detail-outlet-section .detail-outlet-image {
+    min-width: 100%;
   }
   .description-content .about-title {
-    font-size: 1.3em;
+    margin-top: 1.875rem;
+  }
+}
+
+@media (max-width: 50rem) {
+  .menu-wrapper {
+    max-width: 50%;
+  }
+  .review-container {
+    columns: 2;
+  }
+  .detail-outlet-section .detail-outlet-name {
+    margin-top: 6.25rem;
   }
 }
 
 @media (max-width: 43.75rem) {
   .form-container {
     max-width: 100%;
+  }
+  .menu-wrapper {
+    max-width: 60%;
   }
   .notfound-container {
     margin-bottom: 6.25rem;
@@ -304,25 +383,17 @@ textarea {
   }
 }
 
-@media (max-width: 50rem) {
+@media (max-width: 37rem) {
+  .menu-wrapper {
+    max-width: 100%;
+  }
+  .review-container {
+    columns: 1;
+  }
   .detail-outlet-section .detail-outlet-name {
-    margin-top: 6.25rem;
-  }
-}
-
-@media (max-width: 74.938rem) {
-  .form-container,
-  .wrapper {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .detail-outlet-section .description-wrapper {
-    flex-direction: column;
-  }
-  .detail-outlet-section .detail-outlet-image {
-    min-width: 100%;
+    font-size: 1.7em;
   }
   .description-content .about-title {
-    margin-top: 1.875rem;
+    font-size: 1.3em;
   }
 }
