--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,8 +218,12 @@ body {
   color: var(--white-color);
   border-top-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
+  border-top-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
   padding: 0.125rem 0.5rem;
+  text-transform: uppercase;
   font-size: 1em;
+  font-weight: 600;
 }
 
 
@@ -429,8 +433,17 @@ body {
   margin-top: 3.125rem;
 }
 
-.choose-image {
+.choose-outline {
   max-width: 50%;
+  border: 1px solid var(--primary-color);
+  border-radius: 0.75rem;
+}
+
+.choose-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  clip-path: polygon(18% 0, 100% 0, 100% 77%, 77% 100%, 0 100%, 0 20%);
   border-radius: 0.75rem;
 }
 
