--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -36,6 +36,24 @@ li {
   color: var(--blue-gray);
 }
 
+.btn {
+  padding: 0.6rem 1.25rem;
+  background-color: var(--dark-black);
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+  color: var(--white-color);
+  cursor: pointer;
+  transition: 0.3s all;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  -webkit-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+  -moz-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+  box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
+}
+
 
 /* detail-outlet section */
 
@@ -70,16 +88,24 @@ li {
   color: var(--dark-black);
 }
 
-.description-wrapper .detail-outlet-image {
-  border-radius: 0.25em;
-  min-width: 55%;
+.outlet-border {
+  border: 1px solid var(--dark-black);
+  border-radius: 0.75rem;
+  min-width: 53%;
+}
+
+.outlet-border .detail-outlet-image {
+  display: block;
+  border-radius: 0.75rem;
+  clip-path: polygon(18% 0, 100% 0, 100% 77%, 77% 100%, 0 100%, 0 20%);
+  width: 100%;
 }
 
 .description-content .about-title {
   font-size: 1.6em;
   letter-spacing: 0.056em;
-  font-weight: 700;
-  margin-bottom: 0.75rem;
+  font-weight: 600;
+  margin-bottom: 4px;
 }
 
 .description-wrapper .detail-outlet-description {
@@ -88,9 +114,10 @@ li {
   word-wrap: break-word;
   overflow: hidden;
   max-height: 12em;
-  font-size: 1.1em;
+  font-size: 1em;
+  font-weight: 400;
   line-height: 1.8em;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .description-wrapper .detail-outlet-category {
@@ -137,9 +164,11 @@ li {
 /* Food Section */
 
 .menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(1rem, 1fr));
+  column-gap: 2rem;
+  row-gap: 1rem;
+  margin: 8rem 0 1rem 0;
   max-width: 100%;
 }
 
@@ -147,17 +176,36 @@ li {
   margin: 1rem auto 0 auto;
 }
 
-.menu-title {
-  margin: 6.25rem 0 1rem 0;
-  font-size: 2em;
+.list-menu-description {
+  grid-column: span 1;
+}
+
+.list-menu-description .menu-title {
+  font-size: 1.6em;
   font-weight: 600;
   color: var(--dark-black);
 }
 
+.list-menu-description .menu-description {
+  margin-top: 0.5rem;
+  font-size: 14px;
+}
+
+.list-menu-description .seeall-menu {
+  display: inline-block;
+  text-decoration: none;
+  margin: 1rem 0;
+}
+
 .menu-wrapper {
-  width: 100%;
   padding: 0.5rem;
-  border-radius: 4px;
+  max-width: 100%;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  background-color: var(--white-color);
+  -webkit-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
+  -moz-box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
+  box-shadow: 2px 10px 48px -15px rgba(209, 209, 209, 1);
 }
 
 .menu-card {
@@ -165,7 +213,6 @@ li {
   align-items: center;
   gap: 0.8rem;
   padding: 3px 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .menu-icon {
@@ -177,16 +224,48 @@ li {
 
 .menu-list {
   font-weight: 400;
+  width: 100%;
 }
 
 .menu-name {
   font-size: 1em;
+  font-weight: 500;
+}
+
+.menu-location {
+  display: flex;
+  column-gap: 0.2rem;
+  margin: 4px 0;
+  color: var(--blue-gray);
+}
+
+.menu-buy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-items: center;
+  width: 100%;
+}
+
+.menu-buy .chart-wrapper {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin-left: auto;
+  border-radius: 5px;
+  border: 0;
+  background-color: var(--primary-color);
+}
+
+.chart-icon {
+  max-width: 14px;
+  margin: 6px;
 }
 
 .menu-price {
   font-size: 14px;
-  font-weight: 300;
-  color: var(--blue-gray);
+  font-weight: 400;
+  color: var(--primary-color);
 }
 
 
@@ -332,28 +411,29 @@ span {
   resize: vertical;
 }
 
-.form-container button {
-  padding: 0.75rem 1.25rem;
+.btn-form {
   margin: 0.9rem 0;
-  background-color: var(--dark-black);
-  border: none;
-  border-radius: 0.5rem;
-  font-size: 1em;
-  color: var(--white-color);
-  cursor: pointer;
-  transition: 0.3s all;
-}
-
-.form-container button:hover {
-  transform: translateY(-3px);
-  -webkit-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
-  -moz-box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
-  box-shadow: 2px 7px 20px -3px rgba(17, 32, 49, 0.63);
 }
 
 @media (max-width: 74.938rem) {
+  .menu {
+    grid-template-columns: repeat(2, minmax(1rem, 1fr));
+  }
+  .list-menu-description {
+    grid-column: span 2;
+    width: 70%;
+  }
+  .list-menu-description .menu-title {
+    font-size: 2rem;
+  }
+  .list-menu-description .menu-description {
+    font-size: 1rem;
+  }
   .review-container {
     columns: 3;
+  }
+  .outlet-border {
+    min-width: 100%;
   }
   .form-container,
   .menu,
@@ -364,15 +444,18 @@ span {
   .detail-outlet-section .description-wrapper {
     flex-direction: column;
   }
-  .detail-outlet-section .detail-outlet-image {
-    min-width: 100%;
-  }
   .description-content .about-title {
     margin-top: 1.875rem;
   }
 }
 
 @media (max-width: 50rem) {
+  .list-menu-description .menu-title {
+    font-size: 1.5em;
+  }
+  .list-menu-description {
+    width: 100%;
+  }
   .review-container {
     columns: 2;
   }
@@ -382,6 +465,12 @@ span {
 }
 
 @media (max-width: 43.75rem) {
+  .menu {
+    grid-template-columns: repeat(1, minmax(1rem, 1fr));
+  }
+  .list-menu-description {
+    grid-column: inherit;
+  }
   .form-container {
     max-width: 100%;
   }
