--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,8 +61,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.625rem 0;
-  min-height: 4.375rem;
   max-width: 62.5rem;
+  height: 3.75rem;
   margin: 0 auto;
 }
 
@@ -140,6 +140,7 @@ body {
   min-width: 2.75rem;
   text-decoration: none;
   font-size: 1.3em;
+  color: var(--dark-black);
   padding: 1rem 0;
   transition: all 0.3s;
 }
