--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -6,18 +6,94 @@
   --gold-color: #ffcc47;
 }
 
-@media (max-width: 35rem) {
-  .list-items {
-    font-size: 14px;
+@media (max-width: 74.938rem) {
+  .container {
+    max-width: 100%;
+    margin: 0;
   }
-  .main-container {
-    margin: 0 20px;
+  .navbar-wrapper {
+    border: 0;
   }
-  .outlet-image {
-    height: 14.375rem;
+  .logo {
+    padding-left: 1.2rem;
   }
-  .link-container {
-    margin-top: 2rem;
+  .nav-list {
+    padding-right: 1.2rem;
+  }
+  .hero {
+    margin-top: 0;
+    max-width: 100%;
+  }
+  .hero .hero-image {
+    max-width: 100%;
+    border-radius: 0;
+  }
+  .outlet {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+  .most-favorite {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+  .all-food {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+  .choose {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+  .footer-wrapper {
+    margin: 0 2.25rem;
+  }
+}
+
+@media (max-width: 58.125rem) {
+  .social-items {
+    padding: 0.375rem;
+    font-size: 0.875rem;
+  }
+  .choose-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .choose-image {
+    max-width: 100%;
+  }
+  .choose-title {
+    margin-top: 1.875rem;
+    font-size: 1.3em;
+  }
+  .list-choose-item {
+    font-size: 1.188rem;
+  }
+  .footer-wrapper {
+    flex-direction: column;
+  }
+  .bites-description {
+    font-size: 1.3em;
+    margin-bottom: 1.25rem;
+  }
+  .footer-content {
+    margin-bottom: 1.875rem;
+  }
+}
+
+@media (max-width: 52.5rem) {
+  .bites-excess {
+    margin: 100px auto;
+  }
+  .badge {
+    font-size: 0.875rem;
+    padding: 0.5rem 0.75rem;
+  }
+  .choose-title {
+    font-size: 1.25em;
+  }
+  .list-choose-item {
+    font-size: 1em;
   }
 }
 
@@ -87,95 +163,19 @@
     margin-top: 1.875rem;
     font-size: 1em;
   }
+  .link-container {
+    margin-top: 2rem;
+  }
 }
 
-@media (max-width: 74.938rem) {
-  .container {
-    max-width: 100%;
+@media (max-width: 34.25rem) {
+  .main-container {
     margin: 0;
   }
-  .navbar-wrapper {
-    border: 0;
+  .outlet-container {
+    width: 100%;
   }
-  .logo {
-    padding-left: 1.2rem;
-  }
-  .nav-list {
-    padding-right: 1.2rem;
-  }
-  .hero {
-    margin-top: 0;
-  }
-  .hero .hero-image {
-    max-width: 100%;
-    border-radius: 0;
-  }
-  .outlet {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .most-favorite {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .all-food {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .choose {
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  .footer-wrapper {
-    margin: 0 2.25rem;
-  }
-}
-
-@media (max-width: 58.125rem) {
-  .container {
-    margin: 0;
-    max-width: 100%;
-  }
-  .social-items {
-    padding: 0.375rem;
-    font-size: 0.875rem;
-  }
-  .choose-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .choose-image {
-    max-width: 100%;
-  }
-  .choose-title {
-    margin-top: 1.875rem;
-    font-size: 1.3em;
-  }
-  .list-choose-item {
-    font-size: 1.188rem;
-  }
-  .footer-wrapper {
-    flex-direction: column;
-  }
-  .bites-description {
-    font-size: 1.3em;
-    margin-bottom: 1.25rem;
-  }
-  .footer-content {
-    margin-bottom: 1.875rem;
-  }
-}
-
-@media (max-width: 52.5rem) {
-  .badge {
-    font-size: 0.875rem;
-    padding: 0.5rem 0.75rem;
-  }
-  .choose-title {
-    font-size: 1.25em;
-  }
-  .list-choose-item {
-    font-size: 1em;
+  .outlet-image {
+    height: 14.375rem;
   }
 }
